# pairing_crypto

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  FUTURE.md  README.md  SECURITY.md  deny.toml  pairing-crypto.podspec  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci-core.yml  ci-detox-android.yml  ci-detox-ios.yml  ci-java.yml  ci-obj-c.yml  ci-wrapper-c.yml  ci-wrapper-java.yml  ci-wrapper-obj-c.yml  ci-wrapper-rn.yml  ci-wrapper-wasm.yml  ci.yml  github_backup.yaml  github_clone_assurance.yaml
benches/: generators.rs  key_gen.rs  proof.rs  sign.rs
benches/bbs/: README.md  api.rs  core_benches.rs  key_gen.rs  profile.rs  profile_sha256.rs  proof.rs  sign.rs
bls/: Cargo.toml
bls/src/: secret_key.rs
bls12_381_plus/: Cargo.toml  README.md
bls12_381_plus/src/: fp.rs  fp2.rs  g1.rs  g2.rs  hash_to_field.rs  isogeny.rs  lib.rs  pairings.rs  scalar.rs  util.rs
docs/: API.md  CONTRIBUTING.md  FUTURE_APIS.md
examples/: README.md  bbs_simple.rs
hash2curve/: Cargo.toml
hash2curve/src/: hash_to_field.rs  lib.rs  signum.rs
scripts/: code_coverage.sh  commit-lint.sh
src/: bbs_plus.rs  common.rs  curves.rs  error.rs  lib.rs  schemes.rs
src/bbs_plus/: blind_signature.rs  blind_signature_context.rs  issuer.rs  message_generator.rs  pok_signature.rs  pok_signature_proof.rs  prover.rs  signature.rs  verifier.rs
src/common/: ciphersuite.rs  error.rs  h2c.rs  h2s.rs  hash_param.rs  interface.rs  key_pair.rs  public_key.rs  secret_key.rs  serialization.rs  util.rs
src/core/: proof_committed_builder.rs  proof_message.rs  signature_blinding.rs  util.rs
src/curves/: bls12_381.rs  macros.rs  mod.rs  point_serde.rs  scalar_type.rs
src/pairings/: Cargo.toml
src/ps/: blind_signature.rs  blind_signature_context.rs  issuer.rs  message_generator.rs  pok_signature.rs  pok_signature_proof.rs  prover.rs  public_key.rs  secret_key.rs  signature.rs  verifier.rs
src/schemes/: bbs.rs  bbs_blind.rs  bbs_bound.rs  bls.rs  bls_key_pop.rs  core.rs  mod.rs  ps.rs  pseudonym.rs
src/tests/: common.rs  mock_rng.rs  mod.rs
tests/: bbs.rs  bbs_api.rs  bbs_api_fixtures.rs  bbs_bound_api.rs  bbs_tooling_key_gen.rs  bls.rs  bls_api.rs  common.rs  nym_api.rs
tests/fixtures/: test_asset.json
tools/bbs-bound-fixtures-generator/: Cargo.toml
tools/bbs-bound-fixtures-generator/src/: lib.rs  main.rs  model.rs
tools/bbs-bound-fixtures-generator/src/generators/: mod.rs  signature.rs
tools/bbs-fixtures-generator/: Cargo.toml  README.md
tools/bbs-fixtures-generator/src/: lib.rs  main.rs  mock_rng.rs  model.rs  util.rs
tools/bbs-fixtures-generator/src/generators/: h2s.rs  key_pair.rs  mod.rs  proof.rs  signature.rs
tools/bbs-generators/: Cargo.toml  README.md
tools/bbs-generators/src/: main.rs
tools/key-gen/: Cargo.toml  README.md
tools/key-gen/src/: main.rs
wrappers/c/: .gitignore  Cargo.toml  Makefile  cbindgen.toml
wrappers/c/scripts/: build-platform-targets.sh  generate-c-header.sh  test.sh
wrappers/c/src/: api.rs  bbs.rs  dtos.rs  lib.rs  macros.rs
wrappers/c/src/api/: derive_proof.rs  get_proof_size.rs  key_gen.rs  sign.rs  verify.rs  verify_proof.rs
wrappers/c/src/bbs/: get_proof_size.rs  key_gen.rs  proof_gen.rs  proof_verify.rs  sign.rs  verify.rs
wrappers/c/tests/: CMakeLists.txt  bbs_api_test.c  pairing_crypto_test.c
wrappers/java/: README.md  build.gradle  settings.gradle
wrappers/java/jni/: Cargo.toml
wrappers/java/jni/src/: bbs.rs  lib.rs
wrappers/java/jni/src/bbs/: get_proof_size.rs  key_gen.rs  proof_gen.rs  proof_verify.rs  sign.rs  verify.rs
wrappers/obj-c/: .gitignore  Makefile  README.md
wrappers/react-native/: .eslintrc.js  .gitignore  .prettierrc.js  README.md  mattrglobal-pairing-crypto-rn.podspec  package.json  tsconfig.json  (+1 more)
wrappers/wasm/: .gitignore  Cargo.toml  README.md  jest.config.js  package-lock.json  package.json
wrappers/wasm/__fixtures__/: index.ts  keyPair.json
wrappers/wasm/__fixtures__/proof/: proof-001.json  proof-002.json  proof001.json  proof002.json  proof003.json  proof004.json  proof005.json  proof006.json  proof007.json  proof008.json  proof009.json  proof010.json  proof011.json  proof012.json
wrappers/wasm/__fixtures__/signature/: signature001.json  signature002.json  signature003.json  signature004.json  signature005.json  signature006.json  signature007.json
wrappers/wasm/__tests__/: utilities.ts
wrappers/wasm/__tests__/bbs/bls12381/: deriveProof-fixtures.spec.ts  deriveProof.spec.ts  keyGen.spec.ts  sign.spec.ts  verify-fixtures.spec.ts  verify.spec.ts  verifyProof-fixtures.spec.ts
wrappers/wasm/__tests__/bbs_bound/bls12381_bbs_g1_bls_sig_g2_sha256/: deriveProof.spec.ts  keyGen.spec.ts  keyPopGen.spec.ts  keyPopVerify.spec.ts  sign.spec.ts  verify.spec.ts  verifyProof.spec.ts
wrappers/wasm/__tests__/bls12381/: keyGen.spec.ts
wrappers/wasm/__tests__/bls12381/bbs/: deriveProof-fixtures.spec.ts  deriveProof.spec.ts  keyGen.spec.ts  sign.spec.ts  verify-fixtures.spec.ts  verify.spec.ts  verifyProof-fixtures.spec.ts
wrappers/wasm/bench/: helper.ts  index.ts
wrappers/wasm/scripts/: build-package.sh  install-dependencies.sh  pack-wasm-base64.js  publish-unstable.sh  publish.sh
wrappers/wasm/src/: api.rs  bbs_bound.rs  dtos.rs  lib.rs  macros.rs  utils.rs  wasm.rs
wrappers/wasm/src/bbs/: api.rs  dtos.rs
wrappers/wasm/src/bbs_bound/: api.rs  dtos.rs
wrappers/wasm/src/js/: index.d.ts  index.js  index.web.js  package.json  wasm_module.js
wrappers/wasm/src/js/types/: BbsDeriveProofRequest.ts  BbsSignRequest.ts  BbsVerifyProofRequest.ts  BbsVerifyRequest.ts  BbsVerifyResult.ts  index.ts
wrappers/wasm/src/js/types/bbs/: BbsSignRequest.ts  BbsVerifyProofRequest.ts  KeyGenerationRequest.ts  index.ts
wrappers/wasm/src/js/types/bbs_bound/: BbsBoundDeriveProofRequest.ts  BbsBoundSignRequest.ts  BbsBoundVerifyProofRequest.ts  BbsBoundVerifyRequest.ts  BbsBoundVerifyResult.ts  BlsKeyPopGenRequest.ts  BlsKeyPopVerifyRequest.ts  index.ts
wrappers/wasm/tests/: bls12381.spec.ts
wrappers/wasm/tests/bbs/: sign.spec.ts  verify.spec.ts
wrappers/wasm/tools/: generate-fixtures.ts
(+410 files in other folders)
