[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Tobias Looker <tobias.looker@mattr.global"]
edition = "2018"
license = "Apache-2"
readme = "README.md"
name = "pairing_crypto"
version = "0.1.0"

[features]
default = []
alloc = []
wasm = ["alloc", "getrandom"]

[dependencies]
digest = "0.9"
ff = "0.11.0"
group = "0.11.0"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
rand_core = "0.6"
pairing = "0.21.0"
# TODO note prior to crate publication this dependency MUST be shifted to a published version of blstrs
blstrs = { version = "0.4.2", path = "./../blstrs" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
subtle = "2.4"
zeroize = { version  ="1.3", features = ["zeroize_derive"] }

[dev-dependencies]
[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.9.0", features = ["criterion", "flamegraph"] }
criterion = { version = "0.3.5", features = ["html_reports"] }
hex = "0.4"
rand_xorshift = "0.3"
bbs-fixtures-generator = {version = "0.1.0", path = "tools/bbs-fixtures-generator"}
serde_json = "1.0.82"

[[bench]]
name = "bbs_profile"
path = "benches/bbs/profile.rs"
harness = false

[[bench]]
name = "bbs_key_gen"
path = "benches/bbs/key_gen.rs"
harness = false

[[bench]]
name = "bbs_sign"
path = "benches/bbs/sign.rs"
harness = false

[[bench]]
name = "bbs_proof"
path = "benches/bbs/proof.rs"
harness = false

[workspace]
members = [
    "tools/bbs-fixtures-generator",
    "wrappers/c",
    "wrappers/wasm"
]