[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Tobias Looker <tobias.looker@mattr.global"]
edition = "2018"
license = "Apache-2"
readme = "README.md"
name = "pairing_crypto"
version = "0.1.0"

[features]
default = []
alloc = []
wasm = ["alloc", "getrandom"]
__private_generator_api = []
__private_bbs_fixtures_generator_api = []

[dependencies]
digest = "0.9"
ff = "0.12.0"
group = "0.12.0"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
rand_core = "0.6"
pairing = "0.22.0"
# TODO note prior to crate publication this dependency MUST be shifted to a published version of blstrs
blstrs = { version = "0.6.1", path = "./../blstrs" }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.4"
zeroize = { version  ="1.3", features = ["zeroize_derive"] }
sha2 = "0.9"
sha3 = "0.9"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
hex = "0.4"
rand_xorshift = "0.3"
bbs-fixtures-generator = {version = "0.1.0", path = "tools/bbs-fixtures-generator"}
serde_json = "1.0.82"

[[bench]]
name = "bbs_profile"
path = "benches/bbs/profile.rs"
harness = false

[[bench]]
name = "bbs_key_gen"
path = "benches/bbs/key_gen.rs"
harness = false

[[bench]]
name = "bbs_api"
path = "benches/bbs/api.rs"
harness = false

[workspace]
members = [
    "tools/bbs-fixtures-generator",
    "tools/bbs-generators",
    "tools/key-gen",
    "wrappers/c",
    "wrappers/java/jni",
    "wrappers/wasm"
]