[package]
name = "pairing_crypto"
version = "0.4.2"
authors = ["Tobias Looker <tobias.looker@mattr.global>", "Gaurav Tiwari <gaurav.tiwari@mattr.global>", "Vasilis Kalos <vasilis.kalos@mattr.global>"]
description = "A library for some of the pairing cryptography schemes"
repository = "https://github.com/mattrglobal/pairing_crypto"
keywords = ["bbs-signatures", "cryptography"]
categories = ["cryptography"]
edition = "2021"
license = "Apache-2"
readme = "README.md"

[features]
default = []
alloc = []
wasm = ["alloc", "getrandom"]
# feature to expose internal APIs to build fixture-generation tools
__private_bbs_fixtures_generator_api = []

[dependencies]
digest = "0.9"
ff = "0.12.0"
group = "0.12.0"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
rand_core = "0.6"
pairing = "0.22.0"
blstrs = { git = "ssh://git@github.com/mattrglobal/blstrs", rev = "a0cb960", version = "0.6.1" }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.4"
zeroize = { version  ="1.3", features = ["zeroize_derive"] }
sha2 = "0.9"
sha3 = "0.9"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4"
rand_xorshift = "0.3"
bbs-fixtures-generator = {version = "0.1.0", path = "tools/bbs-fixtures-generator"}
serde_json = "1.0.82"
log = "0.4"
pretty_env_logger = "0.4"

[[bench]]
name = "bbs_profile"
path = "benches/bbs/profile.rs"
harness = false

[[bench]]
name = "bbs_key_gen"
path = "benches/bbs/key_gen.rs"
harness = false

[[bench]]
name = "bbs_api"
path = "benches/bbs/api.rs"
harness = false

[[example]]
name = "bbs_simple"

[workspace]
members = [
    "tools/bbs-fixtures-generator",
    "tools/bbs-generators",
    "wrappers/c",
    "wrappers/java/jni",
    "wrappers/wasm"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
