[package]
name = "bls"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[features]
default = ["alloc"]
alloc = ["bls12_381_plus/alloc"]

[dependencies]
bls12_381_plus = { version = "0.4", path = "../bls12_381_plus" }
ff = "0.9"
group = "0.9"
hkdf = "0.10"
pairing = "0.19"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.9", default-features = false }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1.2", features = ["zeroize_derive"] }

[dev-dependencies]
rand_xorshift = "0.3"
