[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
    "Mike Lodder <redmike7@gmail.com>",
]
description = "Implementation of the BLS12-381 pairing-friendly elliptic curve construction. This is a fork from zkcrypto/bls12_381 but adds hash to curve and multiexponentiation methods"
documentation = "https://docs.rs/bls12_381/"
homepage = "https://github.com/mikelodder7/bls12_381_plus"
license = "MIT/Apache-2.0"
name = "bls12_381_plus"
repository = "https://github.com/mikelodder7/bls12_381_plus"
version = "0.4.0"
edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.ff]
version = "0.9"
default-features = false

[dependencies.group]
version = "0.9"
default-features = false
optional = true

[dependencies.pairing]
version = "0.19"
optional = true

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.2.1"
default-features = false

[dependencies.digest]
version = "0.9"
optional = true

[features]
default = ["groups", "pairings", "alloc", "endo", "hashing"]
groups = ["group"]
hashing = ["digest"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
nightly = ["subtle/nightly"]
endo = []
