[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
    "Mike Lodder <redmike7@gmail.com>",
]
description = """
Implementation of the BLS12-381 pairing-friendly elliptic curve construction.
This is a fork from zkcrypto/bls12_381 but adds hash to curve and multiexponentiation methods
as well as enables multi-pairing without the allocator requirement.
"""
documentation = "https://docs.rs/bls12_381_plus/"
homepage = "https://github.com/mikelodder7/bls12_381_plus"
license = "MIT/Apache-2.0"
name = "bls12_381_plus"
repository = "https://github.com/mikelodder7/bls12_381_plus"
version = "0.4.1"
edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
criterion = "0.3"
ff-zeroize = "0.6"
hex = "0.4"
rand_xorshift = "0.3"
sha2 = "0.9"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.ff]
version = "0.9"
default-features = false

[dependencies.group]
version = "0.9"
default-features = false
optional = true

[dependencies.pairing]
version = "0.19"
optional = true

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.4"
default-features = false

[dependencies.digest]
version = "0.9"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.zeroize]
version = "1.2"

[dependencies.heapless]
version = "0.6"

[features]
default = ["groups", "pairings", "alloc", "endo", "hashing"]
groups = ["group"]
hashing = ["digest"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
nightly = ["subtle/nightly"]
endo = []
