[package]
name = "bbs-bound-fixtures-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pairing_crypto]
version = "0.2.0"
path = "../../"
features = ["__private_bbs_fixtures_generator_api"]


[dependencies.bbs-fixtures-generator]
version = "0.1.0"
path = "../bbs-fixtures-generator"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde_derive = "1.0.139"
serde_json = "1.0.82"
serde = "1.0.139"
hex = {version = "0.4.3", features = ["serde"]}
blstrs = { git = "ssh://git@github.com/mattrglobal/blstrs", rev = "a0cb960", version = "0.6.1" }
sha2 = { version = "0.9", default-features = false }
