[package]
authors = ["MATTR Global Team"]
name = "bbs-fixtures-generator"
version = "0.1.0"
edition = "2021"
license = "Apache-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pairing_crypto]
version = "0.1.0"
path = "../../"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
hex = {version = "0.4.3", features = ["serde"]}
rand = "0.8.5"