[package]
authors = ["MATTR Global Team"]
name = "bbs-fixtures-generator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pairing_crypto]
version = "0.4.2"
path = "../../"
features = ["__private_bbs_fixtures_generator_api"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
hex = {version = "0.4.3", features = ["serde"]}
rand = "0.8.5"
sha2 = { version = "0.9", default-features = false }
sha3 = "0.9"
hkdf = "0.11"
digest = "0.9"
blstrs = { git = "ssh://git@github.com/mattrglobal/blstrs", rev = "a0cb960", version = "0.6.1" }
