[package]
name = "bbs-generators"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pairing_crypto]
version = "0.2.0"
path = "../../"
features = ["__private_bbs_fixtures_generator_api"]

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
hex = {version = "0.4.3", features = ["serde"]}
