[package]
name = "key-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pairing_crypto]
version = "0.1.0"
path = "../../"
features = ["__private_generator_api"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
serde_bytes = "0.11.7"
ciborium = "0.2.0"
hex = {version = "0.4.3", features = ["serde"]}
base64 = "0.13.0"
strum = { version = "0.24", features = ["derive"] }
mcore = { path="../../../../core/rust/mcore", version="0.1.0"}
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
rand_core = "0.6"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
group = "0.12.0"
