[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Tobias Looker <tobias.looker@mattr.global"]
edition = "2018"
license = "Apache-2"
readme = "README.md"
name = "pairing-crypto-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wasm-bindgen", "wee_alloc"]

[dependencies]
pairing_crypto = { path = '../../', features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = { version = "0.2.74", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
rand = "0.8"
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
lto = true
opt-level = "s"