[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Tobias Looker <tobias.looker@mattr.global"]
edition = "2018"
license = "Apache-2"
readme = "README.md"
name = "pairing_crypto_wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]
console_error = ["console_error_panic_hook"]

[dependencies]
digest = "0.9"
rand_core = "0.6"
pairing_crypto = { path = '../../', features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.18"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
lto = true
opt-level = "s"